--- a/population.qmd
+++ b/population.qmd
@@ -15,20 +15,18 @@ The dashboards on this page include data on total population counts and componen
 
 This dashboard shows annual population counts and percent changes from 2010 to 2022. Data for 2010 and 2020 are from those years' Decennial Census counts; all other years use estimates from the Census Bureau's Population Estimates Program (PEP).
 
-```{r}
-#| label: pop-data
-#| eval: false
+```{=html}
 
+<iframe id="example1" src="https://housingforwardva.shinyapps.io/total_pop/" style="border: none; width: 800px; height: 500px" frameborder="0"></iframe>
 
 ```
-
 ## Components of Population Change
 
 This dashboard breaks down annual population changes by three different components:
 
-- Natural increases (births minus deaths),
-- Domestic migration (net moves from in/out of state), and
-- International migration (net moves from in/out of the country).
+-   Natural increases (births minus deaths),
+-   Domestic migration (net moves from in/out of state), and
+-   International migration (net moves from in/out of the country).
 
 ```{r}
 #| label: change-data
@@ -38,8 +36,6 @@ This dashboard breaks down annual population changes by three different componen
 # Shiny Dashboard should show the changes over time utilizing a faceted bar chart for 2010 through 2022. Three different data viz should show data by state, CBSA, and locality. Filters are on the latter two, which allow you to switch to different geographies.
 
 ```
-
-
 
 ### Additional resources
 
